# ConfigAttempt

./: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp  projimgui.cpp  tinyobjTest.h  vcpkg.json
shaders/: PhongLight.frag
